# Cilqr_cpp

./: CMakeLists.txt  CMakePresets.json  map.mat  test.cpp
include/: ilqr.h  matplotlibcpp.h  utils.h
src/: ilqr.cpp  main.cpp  utils.cpp
